--- a/build.gradle
+++ b/build.gradle
@@ -19,10 +19,14 @@ repositories {
 	mavenCentral()
 }
 
+//Spring Boot Overriding : 의존성 변경 코드
+//ext['hibernate.version'] = '5.2.11.Final'
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	compile 'org.springframework.boot:spring-boot-devtools'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
 	annotationProcessor 'org.projectlombok:lombok'
