--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,8 @@
 language: java
+
+before_install:
+ - chmod +x gradlew
+ 
 jdk:
   - openjdk8
 
@@ -11,8 +15,6 @@ cache:
   directories:
     - '$HOME/.m2/repository'
     - '$HOME/.gradle'
-
-before_script: "chmod +x gradlew"
  
 script: "./gradlew clean build"
 
