- 자동 배포 & 실행

--- a/appspec.yml
+++ b/appspec.yml
@@ -3,3 +3,8 @@ os: linux
 files:
   - source:  / # S3 버킷에서 복사할 파일의 위치
     destination: /home/ec2-user/app/travis/build/ # zip파일을 복사해 압축을 풀 위치
+    
+hooks:
+  AfterInstall: # 배포가 끝나면 아래 명령어를 실행
+    - location: execute-deploy.sh
+      timeout: 180
