--- a/build.gradle
+++ b/build.gradle
@@ -4,9 +4,10 @@ plugins {
 }
 
 apply plugin: 'io.spring.dependency-management'
+apply plugin: 'eclipse'
 
 group = 'com.websvc'
-version = '0.0.3'
+version = '0.0.4'
 sourceCompatibility = '1.8'
 
 configurations {
