--- a/bin/main/application.yml
+++ b/bin/main/application.yml
@@ -9,7 +9,11 @@
 spring:
   profiles:
     active: local #기본 환경 선택, app실행시 파라미터로 넘어온게 없으면 active값을 보게됨
-
+  jpa:
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL5InnoDBDialect
+        
 # local 환경
 ---    
 spring:
@@ -32,3 +36,18 @@ management:
   endpoints:
     web:
       base-path: /
+      
+# 운영 환경
+---
+spring.profiles: set1
+spring.profiles.include: real-db
+  
+server:
+  port: 8081
+
+---
+spring.profiles: set2
+spring.profiles.include: real-db
+
+server:
+  port: 8082
