--- a/build.gradle
+++ b/build.gradle
@@ -27,9 +27,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	compile 'org.springframework.boot:spring-boot-devtools'
-	compile 'pl.allegro.tech.boot:handlebars-spring-boot-starter:0.3.0'
-	compile 'org.mariadb.jdbc:mariadb-java-client'
+	implementation 'org.springframework.boot:spring-boot-devtools'
+	implementation 'pl.allegro.tech.boot:handlebars-spring-boot-starter:0.3.0'
+	implementation 'org.mariadb.jdbc:mariadb-java-client'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
 	annotationProcessor 'org.projectlombok:lombok'
